# grouptender_bot

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
